internal/install/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ki
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ki
  name: httpserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: ghcr.io/ernado/ki/httpserver:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: ki
  name: httpserver-service
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ki
  name: httpserver-ingress
spec:
  ingressClassName: cilium
  rules:
    - host: httpserver.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpserver-service
                port:
                  number: 80
  defaultBackend:
    service:
      name: httpserver-service
      port:
        number: 80
